--- a/style.css
+++ b/style.css
@@ -55,3 +55,15 @@ h1, h2, h3, h4, h5, h6 {
 .small-print {
 	text-align: center;
 	}
+	.navbar-inverse {
+		background-color: #222;
+		border-color: #080808;
+		margin-top: 40px;
+	}
+	.notic {
+		width: 400px;
+		box-shadow: 0px 0 40px;
+		text-align: justify;
+		padding: 30px 0px 30px 30px;
+		margin-left: 50px;
+	}
